fix clipping issues on smaller devices

--- a/homepageAssets/style.css
+++ b/homepageAssets/style.css
@@ -125,7 +125,6 @@ section {
 section .content-container {
     margin-top: 4vw;
     margin-bottom: 4vw;
-    width: 32rem;
 }
 
 .content-container .fa {
@@ -134,12 +133,12 @@ section .content-container {
 }
 
 section .description {
-    text-align: justify;
+    text-align: left;
 }
 
 section img {
     height: auto;
-    max-height: 70vh;
+    max-width: 60%;
 }
 
 section:nth-child(odd) {
@@ -161,14 +160,14 @@ section:nth-child(even) img {
     margin-right: 50px;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 900px) {
     section {
         display: block;
     }
 
     section img {
         margin-left: 0 !important;
-        max-height: 50vh;
+        max-width: 100%;
     }
 }
 
